maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {numerotation()
    // Your code here
}

def numerotation(){
  var cpt = 0
  var x=0
  var y=0
  var L=getMondeLargeur()
  var H=getMondeHauteur()
  for (i <- 0 to H-1){
    for (j<- 0 to L-1){
      if (aBiscuit(i,j)){
        x=i
        y=j
  setIndication(x,y,cpt)  
      }
   }
  }
  while (x!=0 && y!=0){
  cpt=cpt+1
  if (!aMurNord(x,y)){setIndication(x,y-1,cpt)}
  if (!aMurOuest(x,y)){setIndication(x-1,y,cpt)}
  if (!aMurSud()){setIndication(x,y+1,cpt)}
  if (!aMurEst()){setIndication(x+1,y,cpt)}
  x=x-1
  y=y-1
  }}


def aMurSud(x,y):Boolean={
  return aMurNord(x,y+1)
}

def aMurEst(x,y):Boolean={
  return aMurOuest(x+1,y)
}


